SERVER-38855 Perform noop writes on config servers to reach requested at/afterClusterTime